Remove css to stop word wrapping on ToC

--- a/scss/components/_grid-toc.scss
+++ b/scss/components/_grid-toc.scss
@@ -28,7 +28,6 @@
     &-item {
       margin-top: 0.5rem;
       overflow: hidden;
-      white-space: nowrap;
       text-overflow: ellipsis;
     }
   }
